fix: reduce button size on mobile

--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -59,8 +59,8 @@ header{
         font-weight: 700;
 
         @include mobile{
-            font-size: 1.3rem;
-            font-weight: 400;
+            font-size: 1.1rem;
+            font-weight: 300;
         }
 
         @include tablet{
